# pos

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  test-requirements.txt
pos_access_right/: README.rst  __manifest__.py
pos_auto_invoice/: README.rst  __manifest__.py
pos_automatic_cashdrawer/: README.rst
pos_automatic_cashdrawer_cashlogy/: README.rst  __manifest__.py
pos_barcode_rule_priced_with_change_rate/: README.rst  __manifest__.py
pos_blind_session_closing/: README.rst  __manifest__.py
pos_cash_move_reason/: README.rst  __manifest__.py
pos_cashback/: README.rst
pos_cashback_warning/: README.rst  __manifest__.py
pos_category_vertical_display/: README.rst
pos_config_logo/: README.rst  __manifest__.py
pos_config_phone/: README.rst
pos_customer_required/: README.rst  __manifest__.py
pos_customer_tree_view_vat/: README.rst  __manifest__.py
pos_default_partner/: README.rst  __manifest__.py
pos_display_order_number/: README.rst  __manifest__.py
pos_display_total_quantity/: README.rst  __manifest__.py
pos_divide_order_summary/: README.rst  __manifest__.py
pos_empty_home/: README.rst  __manifest__.py
pos_hide_partner_info/: README.rst  __manifest__.py
pos_hr_access_right/: README.rst
pos_lot_barcode/: README.rst  __manifest__.py
pos_margin/: README.rst  __manifest__.py
pos_margin_stored/: README.rst  __manifest__.py
pos_meal_voucher/: README.rst  __manifest__.py
pos_order_remove_line/: README.rst  __init__.py  __manifest__.py
pos_place/: README.rst
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+792 files in other folders)
