[project]
name = "odoo-addons-oca-pos"
version = "18.0.20260319.0"
dependencies = [
    "odoo-addon-pos_barcode_rule_priced_with_change_rate==18.0.*",
    "odoo-addon-pos_config_logo==18.0.*",
    "odoo-addon-pos_customer_tree_view_vat==18.0.*",
    "odoo-addon-pos_display_order_number==18.0.*",
    "odoo-addon-pos_display_total_quantity==18.0.*",
    "odoo-addon-pos_divide_order_summary==18.0.*",
    "odoo-addon-pos_lot_barcode==18.0.*",
    "odoo-addon-pos_order_to_sale_order==18.0.*",
    "odoo-addon-pos_sale_picking_keep==18.0.*",
    "odoo-addon-pos_user_restriction==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
